Update project progress: Add freelancer template and update app.py and index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -270,6 +270,7 @@
             <div class="nav">
                 <a href="/docu">📚 Dokumentation</a>
                 <a href="/todo">📝 Todo Management</a>
+                <a href="/freelancer">🚀 Freelancer Tools</a>
             </div>
         </div>
         
